--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
                     </div>
                     <div class="item_contato">
                         <i class="fa-brands fa-linkedin"></i>
-                        <p>/demetrios-panarello</p>
+                        <p>demetrios-panarello</p>
                     </div>
                     <div class="item_contato">
                         <i class="fa-brands fa-github"></i>
-                        <p>@DemetriosReis</p>
+                        <p>DemetriosReis</p>
                     </div>
                 </div>
             </div>
