--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </section>
 
-    
+
 
     <section class="segunda_sessao">
         <div class="portifolio">
@@ -77,12 +77,13 @@
             <div class="info_projeto">
                 <div class="card">
                     <i class="fa-solid fa-pizza-slice"></i>
-                    <p>Sistema para delivery de pizzaria. Conta com as funcoes de cadastrar cliente, endereco, motoboy e montar pedido.</p>
-                    <p>Java POO   |   Apache</p>
+                    <p>Sistema para delivery de pizzaria. Conta com as funcoes de cadastrar cliente, endereco, motoboy e
+                        montar pedido.</p>
+                    <p>Java POO | Apache</p>
                     <button class="download">Download</button>
                 </div>
-                
-        </div>
+
+            </div>
         </div>
     </section>
 
