--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 
-    <section class="painel_principal">
+    <section class="painel_principal" id="link_curriculo">
         <div class="sobre_mim">
             <h1 class="titulos">Um pouco sobre mim...</h1>
             <p class="descricoes">Atualmente estudo na FATEC Sao Caetano e procuro estagio na area de Desenvolvimento de
@@ -49,7 +49,7 @@
 
 
 
-    <section class="segunda_sessao">
+    <section class="segunda_sessao" id="link_projetos">
         <div class="portifolio">
             <div class="projetos">
                 <h1 class="titulo_projetos">Projetos</h1>
@@ -89,7 +89,7 @@
 
 
 
-    <section class="sessao_contato">
+    <section class="sessao_contato" id="link_contato">
         <div class="sessoes">
             <div class="infos_contato">
                 <h1 class="titulos">Contato</h1>
@@ -125,13 +125,13 @@
         <div class="conteudo_rodape">
             <p class="logo">Demetrios Panarello</p>
             <div class="redes_sociais">
-                <a href="" target="_blank">
+                <a href="#link_contato">
                     <i class="fa-solid fa-phone"></i>
                 </a>
-                <a href="" target="_blank">
+                <a href="#link_curriculo">
                     <i class="fa-solid fa-file"></i>
                 </a>
-                <a href="" target="_blank">
+                <a href="#link_projetos">
                     <i class="fa-solid fa-code"></i>
                 </a>
             </div>
